--- a/instagramClone/Podfile
+++ b/instagramClone/Podfile
@@ -6,6 +6,9 @@ target 'instagramClone' do
   use_frameworks!
 
   # Pods for instagramClone
+	pod 'Firebase/Auth'
+	pod 'Firebase/Database'
+	pod 'Firebase/Storage'
 
 
 end
